--- a/css/style.css
+++ b/css/style.css
@@ -1692,6 +1692,9 @@
 .offers_area .single_offers .about_thumb img {
   width: 100%;
   -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
   transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
